src/assets/css/typography.css
/* Base Typography Styles
Credit to Skeleton.css
–––––––––––––––––––––––––––––––––––––––––––––––––– */

/* NOTE
html is set to 62.5% so that all the REM measurements throughout
are based on 10px sizing. So basically 1.5rem = 15px :) */

html {
  font-size: 62.5%;
}

body {
  font-size: 1.7em;
  /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.6;
  font-weight: 300;
  font-family: "IBM Plex Sans", sans-serif;
  color: #0f242c;
  -webkit-font-smoothing: antialiased;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
}
g,
text {
  font-size: 1.5rem;
  font-family: "IBM Plex Mono", monospace;
  /* letter-spacing: -0.064rem; */
}
p {
  margin-bottom: 1.25rem;
}

/* Typography
  –––––––––––––––––––––––––––––––––––––––––––––––––– */

h1,
h2,
h3,
h4,
h5,
h6 {
  /* margin-top: 0rem; */
  margin-bottom: 2rem;
  font-weight: 900;
  /* font-family: "IBM Plex Mono", monospace; */
  /* color: #3d3d3d; */
}

h1 {
  font-size: 4rem;
  line-height: 1.2;
  letter-spacing: -0.1rem;
}

h2 {
  font-size: 3.6rem;
  line-height: 1.25;
  letter-spacing: -0.125rem;
}

h3 {
  font-size: 3rem;
  line-height: 1.3;
  letter-spacing: -0.1rem;
}

h4 {
  font-size: 2.5rem;
  /* line-height: 1.35; */
  line-height: 1.28;
  /* letter-spacing: -0.08rem; */
  letter-spacing: -0.1rem;
}

h5 {
  font-size: 1.75rem;
  line-height: 1.3;
  letter-spacing: -0.08rem;
}

h6 {
  font-size: 1.5rem;
  line-height: 1.6;
  letter-spacing: 0;
}

/* Larger than phablet */

@media (min-width: 550px) {
  h1 {
    font-size: 5rem;
  }
  h2 {
    font-size: 4.2rem;
  }
  h3 {
    font-size: 3.6rem;
  }
  h4 {
    font-size: 3rem;
  }
  h5 {
    font-size: 2.4rem;
  }
  h6 {
    font-size: 1.5rem;
  }
  p {
    margin-top: 0;
  }
  body {
    font-size: 1.8rem;
    line-height: 1.4;
  }
  /* .text-content > p {
    font-size: 1.8rem;
    line-height: 1.5;
  } */
}

